# nginx-ratelimit-ipset

./: README.md  TODO.md  pyproject.toml
examples/: config.yml
nginx_limit_ipset/: ipset.py
nginx_limitreq_ipset/: cli.py  exec.py  ipset.py  nginx.py  tail.py
nginx_ratelimit_ipset/: cli.py  ipset.py  log.py  nginx.py  tail.py
nginx_ratelimit_ipset/plugins/: __init__.py  sink_linux_ipset.py  source_nginx_ratelimit.py
nginx_ratelimit_ipset/sinks/: ipset.py
nginx_ratelimit_ipset/sources/: tail.py
nginx_ratelimit_ipset/utils/: execute.py  ipset.py  nginx.py  types.py
plugins/: sink_linux_ipset.py  source_nginx_ratelimit.py
tests/: test_nginx_limitreq_ipset.py
utils/: exec.py  execute.py  tail.py
